# traccc-gnn-standalone

./: .gitmodules  CMakeLists.txt  README.md
notebooks/: check_module_ids.ipynb
src/: TestEvent.hpp  TracccEdmConversion.hpp  TracccGpuStandalone.cpp  TracccGpuStandalone.hpp
